[package]
name = "xterm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = {version = "0.28.0", features = ["term", "process", "fs"]}
websocket = "0.24.0"
# tokio = { version = "1.16.1", features = ["full"] }
# futures = "0.3.17"
# warp = "0.3.0"

